Fix nav link misalignment

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
 /* Main styles */
-main {
-  padding-top: 25px;
-  }
-  
 body {
     background: #f5f6f7;
     color: #1b1b32;
@@ -14,7 +10,7 @@ body {
     width: 100%;
     height: 50px;
     background-color: #1b1b32;
-    display: flexbox;
+    display: flex;
     justify-content:space-between;
     align-items: center;
     position:fixed;
@@ -55,6 +51,14 @@ body {
     justify-content: space-evenly;
   }
 
+  nav > ul > li {
+    color: #dfdfe2;
+    margin: 0 0.2rem;
+    padding: 0.2rem;
+    display: block;
+  }
+  
+
   /*Styling .sr-only according to accessability best practices */
   .sr-only {
     position: absolute;
@@ -80,6 +84,7 @@ body {
   /* create a new selector targeting the navigation list elements so that when the cursor hovers over them, the background color and text color are switched, and the cursor becomes a pointer.*/
   li > a {
     text-decoration: none;
+    color: inherit;
     }
   nav > ul > li:hover {
     background-color:#dfdfe2;
